--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,12 @@
             "email": "iboy_2008@163.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=7.2",
+        "pimple/pimple": "^3.0",
+        "psr/simple-cache": "^1.0",
+        "guzzlehttp/guzzle": "^6.2 || ^7.0"
+    },
     "autoload": {
         "psr-4": {
             "CherryneChou\\EasyDada\\": "src"
