--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.2|^8.0",
         "pimple/pimple": "^3.0",
         "psr/simple-cache": "^1.0",
         "guzzlehttp/guzzle": "^6.2 || ^7.0"
