--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         }
     ],
     "require": {
-        "php": ">=7.2|^8.0",
+        "php": "^8.0.2",
         "pimple/pimple": "^3.0",
-        "psr/simple-cache": "^1.0",
-        "guzzlehttp/guzzle": "^6.2 || ^7.0"
+        "psr/simple-cache": "^1.0||^2.0||^3.0",
+        "guzzlehttp/guzzle": "^7.2"
     },
     "autoload": {
         "psr-4": {
